plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '9.0.0-beta2'
}

group 'com.github.StarDevelopmentLLC'
version '0.1.8'

repositories {
//    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://www.jitpack.io'
    }
    maven {
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven { 
        url = 'https://oss.sonatype.org/content/repositories/snapshots' 
    }
    
    maven {
        url = 'https://repo.codemc.org/repository/maven-public/'
    }
}

publishing {
    publications {
        shadow(MavenPublication) { publication ->
            project.shadow.component(publication)
        }
    }
}

processResources {
    filesMatching("*.yml") {
        expand(project.properties)
    }
}

shadowJar {
    archiveClassifier.set('')
    //destinationDirectory = file(System.getProperty("user.home") + File.separator + "Documents" + File.separator + "JarOutput")
    dependencies {
        exclude(dependency('de.tr7zw:item-nbt-api-plugin:2.14.0'))
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT'
    compileOnly 'de.tr7zw:item-nbt-api-plugin:2.14.0'
    api 'com.github.StarDevelopmentLLC:property:0.1.4'
    api 'com.github.StarDevelopmentLLC:clock:0.1.3'
    api 'com.github.StarDevelopmentLLC:helper:0.1.1'
    api 'com.github.StarDevelopmentLLC:registry:0.1.0'
    api 'com.github.StarDevelopmentLLC:actors:0.1.0'
    api 'com.github.StarDevelopmentLLC:config:0.1.1'
    api 'com.github.StarDevelopmentLLC:colors:0.1.4'
    api project(':base')
    api project(':v1_8')
    api project(':v1_9')
    api project(':v1_11')
    api project(':v1_13')
    api project(':v1_13_R2')
    api project(':v1_14')
    api project(':v1_14_4')
    api project(':v1_16')
    api project(':v1_17')
    api project(':v1_19_3')
    api project(':v1_20')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.compileJava.dependsOn(clean)
tasks.jar.finalizedBy(shadowJar)
tasks.publishToMavenLocal.dependsOn(shadowJar)
tasks.build.finalizedBy(publishToMavenLocal)